# SituatedSIPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
instances/Examples/: all_in_one_example_log.xml  task_example_log.xml
instances/Examples/doom/: config.xml  config3.xml  obstacles.xml  task.xml
instances/Examples/learntrap/: config.xml  map.xml  obstacles.xml  task.xml
instances/Examples/small/: config.xml  config1.xml  config2.xml  den520d_no_rot_k5_all.txt  obstacles.xml  task.xml  task_log.xml
instances/Examples/smallWait/: map.xml  obstacles.xml  task.xml  task_log_config1.xml
instances/Examples/splitSecond/: config.xml  map.xml  obstacles.xml  task.xml
instances/Examples/trapped/: config.xml  dijkstraConfig.xml  obstacles.xml  plrtaConfig.xml  task.xml
instances/singleaagent-icaps2020/: anton_email.txt
instances/singleaagent-icaps2020/den520d/: 0_task.xml  10_task.xml  10_task_obs.xml  11_task.xml  12_task.xml  13_task.xml  13_task_obs.xml  14_task.xml  15_task.xml  15_task_obs.xml  16_task.xml  17_task.xml  18_task.xml  18_task_obs.xml  19_task.xml  19_task_obs.xml  1_task.xml  1_task_obs.xml  20_task.xml  21_task.xml  21_task_obs.xml  22_task.xml  23_task.xml  24_task.xml  24_task_obs.xml  25_task.xml  25_task_obs.xml  26_task.xml  26_task_obs.xml  27_task.xml  28_task.xml  28_task_obs.xml  29_task.xml  29_task_obs.xml  2_task.xml  30_task.xml  30_task_obs.xml  31_task.xml  32_task.xml  33_task.xml  (+114 more)
instances/singleaagent-icaps2020/empty64x64/: 101_task_obs.xml  102_task.xml  103_task.xml  103_task_obs.xml  105_task.xml  108_task.xml  108_task_obs.xml  109_task_obs.xml  110_task.xml  110_task_obs.xml  112_task_obs.xml  114_task.xml  116_task_obs.xml  117_task_obs.xml  11_task.xml  11_task_obs.xml  121_task_obs.xml  122_task.xml  122_task_obs.xml  124_task.xml  125_task_obs.xml  126_task.xml  126_task_obs.xml  127_task.xml  127_task_obs.xml  130_task.xml  131_task.xml  131_task_obs.xml  132_task.xml  135_task.xml  136_task.xml  137_task.xml  138_task.xml  140_task.xml  (+347 more)
scripts/: Plot subintervals.ipynb  check_solution.py  instanceEditor.py  make plots.ipynb  run_experiements.ipynb  run_experiments.py  subintervals.py
scripts/visualizer/: visualizer.py
src/: CMakeLists.txt  aa_sipp.cpp  aa_sipp.h  config.cpp  config.h  constraints.cpp  constraints.h  debug.h  distance.cpp  dynamicobstacles.cpp  dynamicobstacles.h  gl_const.h  heuristic.h  lineofsight.h  main.cpp  map.cpp  map.h  mission.cpp  mission.h  realtime_sipp.cpp  realtime_sipp.h  safeIntervals.cpp  safeIntervals.hpp  searchresult.h  structs.h  task.cpp  visualizer.py  xmlLogger.cpp
src/situatedSIPP/: constraints.cpp  constraints.h  dynamicobstacles.cpp  dynamicobstacles.h  realtime_sipp.cpp  realtime_sipp.h  situated_sipp.cpp  situated_sipp.h  structs.h  subintervals.cpp  subintervals.h  subintervals.hpp
src/situatedSIPP/decisionAlgorithms/: '  decisionAlgorithmBase.hpp  miniminbackup.hpp
src/situatedSIPP/expansionAlgorithms/: astar.hpp  expansionAlgorithmBase.hpp  fhat.hpp
src/situatedSIPP/learningAlgorithms/: DijkstraLearning.cpp  DijkstraLearning.hpp  PlrtaLearning.cpp  PlrtaLearning.hpp  learningAlgorithmBase.cpp  learningAlgorithmBase.hpp  noLearning.hpp
(+2726 files in other folders)
